More print css including avoiding page breaks in steps

--- a/src/components/RecipeView/RecipeView.module.scss
+++ b/src/components/RecipeView/RecipeView.module.scss
@@ -153,12 +153,16 @@
   margin: 0;
   margin-bottom: 10px;
   padding: 0;
-  font-size: 0.8em;
+  font-size: 0.9em;
   list-style: none;
 
   li::before {
     content: attr(data-icon);
     padding-right: 5px;
+  }
+
+  @media print {
+    font-size: 1em;
   }
 }
 
